grammar.txt
The syntax of my language (that is very similar to python) in Backus-Naur Form

<while> ::= "while" <variable> <comparator> <variable> 

<print> ::= "print" "(" <variable> ")"
<assignment> ::= <variable> "=" <addition> 
<addition> ::= <term> | <term> "+" <term>
<term> ::= <number> | <variable>

<number> ::= [1-9][0-9]*
<variable> ::= [A-Za-z_]+
<comparator> ::= "<" 
